--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -6,8 +6,35 @@ description: Bringing our community together to support the development of a coh
 manager: Vacant
 featured: true
 ---
-The Diaspora and Community Engagement (DCE) Program looks to strengthen community 
-relations and support the development of a cohesive network through in-person and virtual programming. 
-DCE is developed with the intention of addressing topics that are not usually addressed in YEP’s regular programming. 
-It will operate as an agent to facilitate community problem solving and identify opportunities of Diaspora mobilization and partnerships.
-
+<div class="content">
+      <div class="container">
+          <div class="row">
+               <div class="col-sm-7 col-md-7">
+<p>The Diaspora and Community Engagement (DCE) program looks to strengthen community relations and support the development of a cohesive network through in-person and virtual programming. DCE was developed with the intention of addressing topics that are not usually address in YEP’s regular programming. It will operate as an agent to facilitate community problem solving and identify opportunities of Diaspora mobilization and partnerships. </p>                   
+    </div>
+       <div class="col-sm-5 col-md-4 col-md-offset-1">
+         <aside class="sidebar">                                                                                  
+   <div class="well">
+    <h2>Program Mission </h2>
+    <p> Operate as agent to facilitate community problem solving initiatives, identify opportunities for diaspora partnerships and enable the further development of a cohesive community/network.</p>
+    <hr>
+    <h2>Program Vision</h2>
+      <p> YEP will SUPPORT members of the diaspora by developing platforms and hosting events that will allow for communities to engage across sectors, ENGAGE community members by identifying potential collaborations, and RESOLVE social and professional needs of the Ethiopian Diaspora Community.</p>                              
+     <hr>
+      <h2>Planned Program Activities</h2>
+      <li>Tackling Community Challenges Series: “A series dedicated to highlighting and resolving our community's needs”</li>
+      <li>Diaspora Corner: a blog where we highlight individuals who inspire us, thriving in their field of work and being examples in their lives and works.</li>
+    <hr>
+     <h2>Contact</h2> 
+    <p> 
+      <li> Do you work for an organization that targets the African Diaspora community?</li>
+      <li> Are you looking for a way to connect with others on issues in our community?</li> 
+      <li> Do you have suggestions on future programming? </li>  
+      We are always looking for way to better know and understand the diaspora community, so please feel free to email us at <a href="mailto:community@yepnetwork.org">community@yepnetwork.org</a>
+ </p>
+      </div>
+          </aside>
+            </div>
+            </div><!-- /.row -->
+            </div><!--/.container-->
+        </div><!-- /.content -->
