--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -30,8 +30,8 @@ featured: true
       <li> Do you work for an organization that targets the African Diaspora community?</li>
       <li> Are you looking for a way to connect with others on issues in our community?</li> 
       <li> Do you have suggestions on future programming? </li>  
-      We are always looking for way to better know and understand the diaspora community, so please feel free to email us at <a href="mailto:community@yepnetwork.org">community@yepnetwork.org</a>
- </p>
+    </p>
+     <p>We are always looking for way to better know and understand the diaspora community, so please feel free to email us at <a href="mailto:community@yepnetwork.org">community@yepnetwork.org</a> </p>
       </div>
           </aside>
             </div>
