--- a/_programs/b_personal-professional-empowerment.html
+++ b/_programs/b_personal-professional-empowerment.html
@@ -12,10 +12,16 @@ featured: true
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                  <h1>Interested in Sponsoring YEP?</h1>
-<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
-        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
-                    
+<p>The Personal and Professional Empowerment program aims at providing latest insights, models, approaches, and tools necessary to take the personal and professional development of YEP’s members to the next level.The program enables you to meet your personal and professional goals, and also the ability to tap into your full potential.</p>
+
+<p> The main goal of this program is to offer comprehensive, unique, and readily available resources and various platforms to help you grow. The program also provides video clips. In the near future, it also makes available opportunities to attend virtual and in-person workshops to those who would like to continue to work on their personal and professional development.</p>
+
+<p> The program has three focus areas. Under each area, we have identified certain soft skills. These soft skills enable you:
+<li>To increase your self-awareness and personal mastery </li>
+<li> To communicate effectively and get along </li>
+<li>  To inspire, influence, and lead others </li>
+<p> Whether you are a student, looking for your first job or aspiring to climb the corporate ladder, open your business or expand your reach, you need to excel in the above three areas.</p>
+<p>While we are working on the contents for the first phase, if you may have any question and/or suggestion, please reach out to us. Stay tuned!</p>                  
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
