--- a/_programs/b_personal-professional-empowerment.html
+++ b/_programs/b_personal-professional-empowerment.html
@@ -16,10 +16,12 @@ featured: true
 
 <p> The main goal of this program is to offer comprehensive, unique, and readily available resources and various platforms to help you grow. The program also provides video clips. In the near future, it also makes available opportunities to attend virtual and in-person workshops to those who would like to continue to work on their personal and professional development.</p>
 
-<p> The program has three focus areas. Under each area, we have identified certain soft skills. These soft skills enable you:
-<li>To increase your self-awareness and personal mastery </li>
-<li> To communicate effectively and get along </li>
-<li>  To inspire, influence, and lead others </li>
+<p>
+ The program has three focus areas. Under each area, we have identified certain soft skills. These soft skills enable you:
+<li>1. To increase your self-awareness and personal mastery </li>
+<li>2. To communicate effectively and get along </li>
+<li>3. To inspire, influence, and lead others </li>
+</p> 
 <p> Whether you are a student, looking for your first job or aspiring to climb the corporate ladder, open your business or expand your reach, you need to excel in the above three areas.</p>
 <p>While we are working on the contents for the first phase, if you may have any question and/or suggestion, please reach out to us. Stay tuned!</p>                  
     </div>
