--- a/_programs/e_recent-arrival.html
+++ b/_programs/e_recent-arrival.html
@@ -11,9 +11,8 @@ categories:
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                  <h1>Interested in Sponsoring YEP?</h1>
-<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
-        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+<p>Your Ethiopian Professional’s recent arrivals Program focuses on helping those we serve learn and thrive in their new communities. This Newcomer Program initiative attempts to offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
+</p>
                     
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
