--- a/_programs/e_recent-arrival.html
+++ b/_programs/e_recent-arrival.html
@@ -16,23 +16,15 @@ categories:
                     
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
-         <aside class="sidebar">
-                                                                                    
+         <aside class="sidebar">                                                                          
    <div class="well">
-    <h2>Mission </h2>
-    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
-    <hr>
-    <h2> Vision</h2>
-      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
-      <h2>Our Programs</h2>
-      <li>Career Development </li>
-      <li>Personal and Professional Empowerment </li>
-      <li>Mentorship </li>
-      <li>Recent Arrivals</li>
-      <li>Diaspora and Community Engagement</li>
-    <hr>
-     <h2>Contact</h2>                          
-     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+    <h2>YEP Programs </h2>
+      <li><a href="https://yepnetwork.github.io/programs/a_career-development.html">Career Development</a></li>
+      <li><a href="https://yepnetwork.github.io/programs/b_personal-professional-empowerment.html">Personal and Professional Empowerment</a> </li>
+      <li><a href="https://yepnetwork.github.io/programs/c_professional-mentorship.html">Mentorship </a></li>
+      <li><a href="https://yepnetwork.github.io/programs/d_diaspora-community-engagement.html">Diaspora and Community Engagement</a>
+      <li><a href="https://yepnetwork.github.io/programs/e_recent-arrival.html">Recent Arrivals</a></li>
+      </li>
  </p>
       </div>
           </aside>
