Updated program detail pages.

--- a/_programs/c_professional-mentorship.html
+++ b/_programs/c_professional-mentorship.html
@@ -8,6 +8,8 @@ categories:
 - programs
 featured: true
 ---
+<div class="row">
+  <div class="col-sm-7 col-md-7">
 A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
 Program Requirements
 The Mentorship Program is a members-only program intended to encourage career growth for members of YEP_DC Chapter through a series of quality discussions. Space is limited and will be granted on a first-come first-served basis. Individuals who are not matched to participate in the program will be eligible to participate in a future program.
@@ -39,3 +41,5 @@ Initiate Group Discussions
 Ask Questions and Post Comments
 Network with other YEP Mentors and Mentees
 What do Mentors Do?
+  </div>
+</div>
