Added order to programs.

--- a/_programs/a_career-development.html
+++ b/_programs/a_career-development.html
@@ -3,8 +3,7 @@ layout: program
 title: Career Development
 img: career-development.jpg
 description: Tools and resources to sharpen members’ knowledge and skills.
-categories:
-- programs
+order: 1
 ---
 <div class="row">
   <div class="col-sm-7 col-md-7">
