--- a/_programs/b_personal-professional-empowerment.html
+++ b/_programs/b_personal-professional-empowerment.html
@@ -4,8 +4,7 @@ title: Personal and Professional Empowerment
 img: personal-professional-empowerment.jpg
 manager: Vacant
 description: Providing the tools and resources that help members develop the confidence and strength to set realistic goals and fulfil their potential.
-categories:
-- programs
+order: 2
 featured: true
 ---
           <div class="row">
@@ -19,13 +18,13 @@ featured: true
 <li>1. To increase your self-awareness and personal mastery </li>
 <li>2. To communicate effectively and get along </li>
 <li>3. To inspire, influence, and lead others </li>
-</p> 
+</p>
 <p> Whether you are a student, looking for your first job or aspiring to climb the corporate ladder, open your business or expand your reach, you need to excel in the above three areas.</p>
-<p>While we are working on the contents for the first phase, if you may have any question and/or suggestion, please reach out to us. Stay tuned!</p>                  
+<p>While we are working on the contents for the first phase, if you may have any question and/or suggestion, please reach out to us. Stay tuned!</p>
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
-                                                                                    
+
    <div class="well">
     <h2>Mission </h2>
     <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
@@ -39,7 +38,7 @@ featured: true
       <li>Recent Arrivals</li>
       <li>Diaspora and Community Engagement</li>
     <hr>
-     <h2>Contact</h2>                          
+     <h2>Contact</h2>
      <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
  </p>
       </div>
