--- a/_programs/e_recent-arrival.html
+++ b/_programs/e_recent-arrival.html
@@ -3,18 +3,17 @@ layout: program
 title: Recent Arrivals
 img: recent-arrival.JPG
 manager: Vacant
-description: Offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents. 
-categories:
-- programs
+description: Offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
+order: 5
 ---
           <div class="row">
                <div class="col-sm-7 col-md-7">
 <p>Your Ethiopian Professional’s recent arrivals Program focuses on helping those we serve learn and thrive in their new communities. This Newcomer Program initiative attempts to offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
 </p>
-                    
+
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
-         <aside class="sidebar">                                                                          
+         <aside class="sidebar">
    <div class="well">
     <h2>YEP Programs </h2>
       <li><a href="https://yepnetwork.github.io/programs/a_career-development.html">Career Development</a></li>
