--- a/_programs/c_professional-mentorship.html
+++ b/_programs/c_professional-mentorship.html
@@ -4,8 +4,7 @@ title: Professional Mentorship
 img: professional-mentorship.jpg
 manager: Vacant
 description: A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
-categories:
-- programs
+order: 3
 featured: true
 ---
 <div class="row">
