--- a/_programs/d_diaspora-community-engagement.html
+++ b/_programs/d_diaspora-community-engagement.html
@@ -4,6 +4,7 @@ title: Diaspora and Community Engagement (DCE)
 img: diaspora-engagement.jpg
 description: Bringing our community together to support the development of a cohesive network through various activities.
 manager: Vacant
+order: 4
 featured: true
 ---
           <div class="row">
