Added body class to programs.

--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -4,6 +4,7 @@ title: Career Development
 img: career-development.jpg
 description: Tools and resources to sharpen members’ knowledge and skills.
 order: 1
+body_class: program
 ---
 <div class="row">
   <div class="col-sm-7 col-md-7">
