--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -6,6 +6,7 @@ manager: Vacant
 description: Providing the tools and resources that help members develop the confidence and strength to set realistic goals and fulfil their potential.
 order: 2
 featured: true
+body_class: program
 ---
           <div class="row">
                <div class="col-sm-7 col-md-7">
