--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -6,6 +6,7 @@ manager: Vacant
 description: A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
 order: 3
 featured: true
+body_class: program
 ---
 <div class="row">
   <div class="col-sm-7 col-md-7">
@@ -29,7 +30,7 @@ Maintain YEP membership throughout the program;
 Complete the application and screening process;
 Attend and participate in program activities and requirements;
 Willingness to be open, honest and a strong communicator to provide consistent follow-up support and guidance to mentee; and
-Willingness to communicate regularly with program staff, participate and submit activity information as required. 
+Willingness to communicate regularly with program staff, participate and submit activity information as required.
 
 Mentorship Resources
 This online space provides a platform for program participants to share experience and exchange resources.
