--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -5,6 +5,7 @@ img: recent-arrival.JPG
 manager: Vacant
 description: Offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
 order: 5
+body_class: program
 ---
           <div class="row">
                <div class="col-sm-7 col-md-7">
