--- a/programs.html
+++ b/programs.html
@@ -4,7 +4,7 @@ title: Programs
 header: Programs
 group: navigation
 permalink: /programs/
-body_class: programs
+body_class: program
 ---
 <!--<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
   <div class="inner">
@@ -12,7 +12,7 @@ body_class: programs
       <h1>YEP Programs</h1>
     </div>
   </div>
-</section>--> 
+</section>-->
 <div class="overview">
   <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="">Our Programs</h2>
