--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -5,9 +5,7 @@ permalink: /business-idea/
 body_class: business idea
 ---
 <h1 class="margin-top-4">YEP 2018 Business Idea Competition </h1>
-<p 
-YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.
-</p>
+<p YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community. </p>
 <h2 MISSION </h2>
 <p Provide a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.</p>
 <p For the purposes of this competition, only startup and early stage businesses are considered. These businesses are defined as any business with less than $75,000 in gross sales. </p>
