--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -4,8 +4,9 @@ title: Business Idea Competition
 permalink: /business-idea/
 body_class: business idea
 ---
-<h1 class="margin-top-4">YEP 2018 Business Idea Competition </h1>
-<p YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community. </p>
+<h1 YEP 2018 Business Idea Competition </h1>
+<p class="intro">
+ YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community. </p>
 <h2 MISSION </h2>
 <p Provide a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.</p>
 <p For the purposes of this competition, only startup and early stage businesses are considered. These businesses are defined as any business with less than $75,000 in gross sales. </p>
@@ -27,4 +28,5 @@ body_class: business idea
 <li> Winner of the competition will get a $1000 cash prize.</li>
 <li> Top 3 winners will be rewarded with a YEP Certificate.</li> 
 <li> Mentoring by entrepreneurs with knowledge and expertise.</li>
-<li> Increased visibility. Winners will present their business idea in front of media and hundreds of attendees.</li>                                                                                                       
+<li> Increased visibility. Winners will present their business idea in front of media and hundreds of attendees.</li>       
+<p Submit your application before April 30, 2018 by completing  <a href="https://goo.gl/xh64gB"> the online form </a> </p>
