--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -5,28 +5,28 @@ permalink: /business-idea/
 body_class: business idea
 ---
 <h1> YEP 2018 Business Idea Competition </h1>
-<p class="intro">
+<p> class="intro">
  YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community. </p>
 <h2> MISSION </h2>
-<p Provide a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.</p>
-<p For the purposes of this competition, only startup and early stage businesses are considered. These businesses are defined as any business with less than $75,000 in gross sales. </p>
+<p> Provide a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.</p>
+<p> For the purposes of this competition, only startup and early stage businesses are considered. These businesses are defined as any business with less than $75,000 in gross sales. </p>
 <h2> SCREENING PROCESS </h2>
-<p The competition will have three phases.</p>
+<p> The competition will have three phases.</p>
 <h3> 1. PRIMARY SCREENING (APPLICATION DOCUMENT REVIEW) </h3>
-<p Participants should submit a short business plan. The business idea and other information in the application such as business potential, impact and feasibility will be evaluated by a committee selected by YEP. The extent to which it impacts the Ethiopian community will also be considered.</p>
+<p> Participants should submit a short business plan. The business idea and other information in the application such as business potential, impact and feasibility will be evaluated by a committee selected by YEP. The extent to which it impacts the Ethiopian community will also be considered.</p>
 <h3> 2. FINAL SCREENING  (PRESENTATION) </h2>
  <p Top 10 candidates selected during the Primary Screening will be invited to make presentations to YEP's Evaluation Committee. Presentations will be evaluated based on various metrics, including the passion demonstrated by participants for pursuing their business plan. </p>
 <h3> 3. FINAL PRESENTATION </h2>                                                                                                         
- <p Top 3 candidates selected from the Secondary Screening will give presentations at a public event in June 2018. </p>
+ <p> Top 3 candidates selected from the Secondary Screening will give presentations at a public event in June 2018. </p>
 <h2> SCHEDULE </h2>
-<p April 30: deadline for submission of application </p>
-<p May 20: Notification of the results from the Primary Screening </p>
-<p June 5: Final Screening (Presentations) </p>
-<p June 10: Notification of the results from the Final Screening </p>                                                                  
+<p> April 30: deadline for submission of application </p>
+<p> May 20: Notification of the results from the Primary Screening </p>
+<p> June 5: Final Screening (Presentations) </p>
+<p> June 10: Notification of the results from the Final Screening </p>                                                                  
 <h2> BENEFITS </h2>  
- <p Benefits for competing participants </p>
+ <p> Benefits for competing participants </p>
 <li> Winner of the competition will get a $1000 cash prize.</li>
 <li> Top 3 winners will be rewarded with a YEP Certificate.</li> 
 <li> Mentoring by entrepreneurs with knowledge and expertise.</li>
 <li> Increased visibility. Winners will present their business idea in front of media and hundreds of attendees.</li>       
-<p Submit your application before April 30, 2018 by completing  <a href="https://goo.gl/xh64gB"> the online form </a> </p>
+<p> Submit your application before April 30, 2018 by completing  <a href="https://goo.gl/xh64gB"> the online form </a> </p>
