--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -15,7 +15,7 @@ body_class: business idea
 <h3> 1. PRIMARY SCREENING (APPLICATION DOCUMENT REVIEW) </h3>
 <p> Participants should submit a short business plan. The business idea and other information in the application such as business potential, impact and feasibility will be evaluated by a committee selected by YEP. The extent to which it impacts the Ethiopian community will also be considered.</p>
 <h3> 2. FINAL SCREENING  (PRESENTATION) </h2>
- <p Top 10 candidates selected during the Primary Screening will be invited to make presentations to YEP's Evaluation Committee. Presentations will be evaluated based on various metrics, including the passion demonstrated by participants for pursuing their business plan. </p>
+ <p> Top 10 candidates selected during the Primary Screening will be invited to make presentations to YEP's Evaluation Committee. Presentations will be evaluated based on various metrics, including the passion demonstrated by participants for pursuing their business plan. </p>
 <h3> 3. FINAL PRESENTATION </h2>                                                                                                         
  <p> Top 3 candidates selected from the Secondary Screening will give presentations at a public event in June 2018. </p>
 <h2> SCHEDULE </h2>
