--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -30,4 +30,4 @@ YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Ide
 <li> Top 3 winners will be rewarded with a YEP Certificate.</li> 
 <li> Mentoring by entrepreneurs with knowledge and expertise.</li>
 <li> Increased visibility. Winners will present their business idea in front of media and hundreds of attendees.</li>       
-<p> Submit your application before April 30, 2018 by completing  <a href="https://goo.gl/xh64gB"> the online form </a>. </p>
+<p> Submit your application before April 30, 2018 by clicking  <a href="https://goo.gl/xh64gB"> here </a> </p>
