--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,9 +4,9 @@ title: Donate
 permalink: /donate/
 body_class: donate
 ---
-<div class="container text-center"> 
+<div class="container text-center">
       <h2>Support Our Work</h2>
-    </div>     
+    </div>
 <div class="overview">
   <section class="sub-navigation">
     <div class="container">
@@ -14,41 +14,44 @@ body_class: donate
         <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
         <li><a data-toggle="tab" href="#menu2">Become a Sponsor</a></li>
       </ul>
-        <div class="tab-content">
+      <div class="content">
+        <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
+
+        <p> Use the buttons below to make your donation today.</p>
+      </div>
+      <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-1">
-           <div class="content">
-          <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
-<p> Use the buttons below to make your donation today.</p>
-             </script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
- style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>          
-       <div class="col-sm-7 col-md-7">
-         <aside class="sidebar">                                                                              
-   <div class="well">
-    <h3>Your payment is protected through SSL encryption. </h3>
-    <hr>
-    <h3> YEP is tax exempt under Section 501(C)(3) of the IRS code.</h3>
-     <h3> All donations are tax deductible per U.S. code using the tax ID number 46-2681571 </h3>                              
-     <hr>
-     <h2>Check</h2>                          
-     <p> If you prefer to donate by check, please mail your donation to:</p>
-     <p> Your Ethiopian Professionals Network</p>
-     <p> 901 S Highland St Suite 315</p>
-     <p> Arlington, VA 22204</p>
-      </div>
-          </aside>
+            <div class="col-sm-7 col-md-7">
+              <iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%" style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
             </div>
-            </div><!-- /.row -->
-            </div><!--/.container-->
-        </div><!-- /.content -->
-                  
-        <div id="menu2" class="tab-pane fade">
-          <div class="row margin-top-2">
-           <div class="content">
+            <div class="col-sm-5 col-md-5">
+              <aside class="sidebar">
+               <div class="well">
+                <h3>Your payment is protected through SSL encryption. </h3>
+                <hr>
+                <h3> YEP is tax exempt under Section 501(C)(3) of the IRS code.</h3>
+                <h3> All donations are tax deductible per U.S. code using the tax ID number 46-2681571 </h3>
+                <hr>
+                <h2>Check</h2>
+                <p> If you prefer to donate by check, please mail your donation to:</p>
+                <p> Your Ethiopian Professionals Network</p>
+                <p> 901 S Highland St Suite 315</p>
+                <p> Arlington, VA 22204</p>
+              </div>
+            </aside>
+          </div>
+        </div>
+      </div>
+      <div id="menu2" class="tab-pane fade">
+        <div class="row margin-top-2">
+          <div class="content">
             <h3>Interested in Sponsoring YEP?</h3>
-              <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p> 
-                <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
-      </div>              
+            <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+            <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 </div>
