--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -6,6 +6,7 @@ body_class: donate
 ---
 <div class="container text-center">
       <h2>Support Our Work</h2>
+      <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
     </div>
 <div class="overview">
   <section class="sub-navigation">
@@ -16,13 +17,12 @@ body_class: donate
       </ul>
       <div class="content">
         <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
-
-        <p> Use the buttons below to make your donation today.</p>
       </div>
       <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-1">
             <div class="col-sm-7 col-md-7">
+                  <p> Use the buttons below to make your donation today.</p>
               <iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%" style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
             </div>
             <div class="col-sm-5 col-md-5">
