--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,7 +4,7 @@ title: Donate
 permalink: /donate/
 body_class: donate
 ---
-<div class="container text-center">
+<div class="container text-left">
       <h2>Support Our Work</h2>
       <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
     </div>
@@ -15,9 +15,9 @@ body_class: donate
         <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
         <li><a data-toggle="tab" href="#menu2">Become a Sponsor</a></li>
       </ul>
-      <div class="content">
-        <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
-      </div>
+      <!-- <div class="content">
+        <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p> 
+      </div> -->
       <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-1">
