--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -22,7 +22,7 @@ body_class: donate
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-1">
             <div class="col-sm-7 col-md-7">
-                  <p> Use the buttons below to make your donation today.</p>
+                  <p class="intro"> Use the buttons below to make your donation today.</p>
               <iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%" style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
             </div>
             <div class="col-sm-5 col-md-5">
