--- a/_pages/team.html
+++ b/_pages/team.html
@@ -29,7 +29,7 @@ body_class: team
   {% endfor %}
 </div>
 
-<h2>Past Team Members</h2>
+<h2>Former Team Members</h2>
 
 <div class="row card-grid">
   {% assign persons = site.data.past-team-members %}
