--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -6,7 +6,7 @@ body_class: donate
 ---
 <div class="container text-left">
       <h2>Support Our Work</h2>
-      <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
+      <p class="intro">  For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. Support the movement today. </p>
     </div>
 <div class="overview">
   <section class="sub-navigation">
@@ -31,6 +31,7 @@ body_class: donate
                 <h3>Your payment is protected through SSL encryption. </h3>
                 <hr>
                 <h3> YEP is tax exempt under Section 501(C)(3) of the IRS code.</h3>
+                <hr>
                 <h3> All donations are tax deductible per U.S. code using the tax ID number 46-2681571 </h3>
                 <hr>
                 <h2>Check</h2>
