--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -12,9 +12,8 @@ body_class: diaspora
         <h1 class="margin-top-0 margin-bottom-2">Diaspora Corner</h1>
       </div>
       <div class="container">
-        <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-         Diaspora Corner is a blog where we highlight individuals who inspire us, thriving in their field of work and being examples in their lives and works.
-        </p>
+       <p class="intro"> Diaspora Corner is a blog where we highlight the accomplishments and perspectives of outstanding individuals in the diaspora. Read their stories and get your dose of inspiration. 
+      </p>
       </div>
     </div>
   </div>
