--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -1,11 +1,10 @@
----
-layout: default
-title: Donate
+layout: landing
+title: Support Our Work
+group: navigation
 permalink: /donate/
-body_class: donate
+body_class: diaspora
 ---
 <div class="container text-left">
-      <h2>Support Our Work</h2>
       <p class="intro">  For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. Support the movement today. </p>
     </div>
 <div class="overview">
