--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -2,7 +2,7 @@ layout: landing
 title: Support Our Work
 group: navigation
 permalink: /donate/
-body_class: diaspora
+body_class: donate
 ---
 <div class="container text-left">
       <p class="intro">  For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. Support the movement today. </p>
