--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -6,12 +6,8 @@ permalink: /about/accomplishments/
 body_class: about
 ---
 <h1 class="margin-top-4">Accomplishments</h1>
-
-<p>
-YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.
-</p>
-<p>
-Here’s a snapshot: 
+<p> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.</p>
+<p> Here’s a snapshot: </p>
 <ul>
   <li><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
   <li><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
