--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@ body_class: events
   <h1>YEP Events</h1>
   <p> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
-  <li YEP Guest Speaker Series - featuring an expert, leader, or influencer </li>
+  <li> YEP Guest Speaker Series - featuring an expert, leader, or influencer </li>
   <li Career Series - tips and resources for success in the workplace or in business </li>
   <li Personal Development - soft skills for a better quality of life </li>
   <li  Diaspora Engagement - panels that delve into specific issues and topics </li>
