--- a/events.html
+++ b/events.html
@@ -8,14 +8,14 @@ body_class: events
 ---
 <div class="container text-left">
   <h1>YEP Events</h1>
-  <p> YEP events are designed to educate, entertain, and empower attendees through:</p>
+  <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
-  <li> YEP Guest Speaker Series - featuring an expert, leader, or influencer </li>
-  <li Career Series - tips and resources for success in the workplace or in business </li>
-  <li Personal Development - soft skills for a better quality of life </li>
-  <li  Diaspora Engagement - panels that delve into specific issues and topics </li>
-  <li Newcomer workshops - for recent immigrants settling into new lives </li>
-  <li Social activities - happy hours and outdoor activities</li>
+  <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
+  <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
+  <li> <i>Personal Development </i> - soft skills for a better quality of life </li>
+  <li> <i>Diaspora Engagement </i> - panels that delve into specific issues and topics </li>
+  <li> <i>Newcomer workshops </i> - for recent immigrants settling into new lives </li>
+  <li> <i>Social activities </i> - happy hours and outdoor activities</li>
   </ul>
 </div>
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
