--- a/events.html
+++ b/events.html
@@ -6,9 +6,14 @@ group: navigation
 permalink: /events/
 body_class: events
 ---
-<div class="container text-left">
-  <h1>YEP Events</h1>
-  <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
+<div class="prose bg-white">
+  <div class="container pad-by-50">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="margin-top-0 margin-bottom-2">Events</h1>
+      </div>
+      <div class="container">
+        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
   <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
   <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
@@ -17,7 +22,12 @@ body_class: events
   <li> <i>Newcomer workshops </i> - for recent immigrants settling into new lives </li>
   <li> <i>Social activities </i> - happy hours and outdoor activities</li>
   </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
+
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
 
 <div class="overview">
