--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,20 +4,25 @@ title: Support Our Work
 permalink: /donate/
 body_class: donate
 ---
-<div class="container text-left">
-      <h1> Support Our Work </h1>
-      <p class="intro">  For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. Support the movement today. </p>
+<div class="prose bg-white">
+  <div class="container pad-by-50">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="margin-top-0 margin-bottom-2">Support Our Work</h1>
+      </div>
+      <div class="container">
+       <p class="intro"> For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. </p>  <p class="intro"> Support the movement today. </p>
+      </div>
     </div>
+  </div>
+</div>
 <div class="overview">
   <section class="sub-navigation">
     <div class="container">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
         <li><a data-toggle="tab" href="#menu2">Become a Sponsor</a></li>
-      </ul>
-      <!-- <div class="content">
-        <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p> 
-      </div> -->
+      </ul>     
       <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-1">
@@ -48,7 +53,7 @@ body_class: donate
         <div class="row margin-top-2">
           <div class="content">
             <h3>Interested in Sponsoring YEP?</h3>
-            <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+            <p class="intro"> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
             <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
           </div>
         </div>
