--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /programs/
 body_class: program
 ---
-div class="prose bg-white">
+ <div class="prose bg-white">
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
