--- a/programs.html
+++ b/programs.html
@@ -1,11 +1,14 @@
 ---
 layout: landing
 title: Programs
+header: Programs
+group: navigation
 permalink: /programs/
 body_class: program
 ---
  <div class="prose bg-white">
   <div class="container pad-by-50">
+    <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2">Our Programs</h1>
       </div>
