--- a/programs.html
+++ b/programs.html
@@ -17,6 +17,7 @@ body_class: program
     </div>
   </div>
 </div>
+</div>
   <section class="sub-navigation">
     <div class="container">
       <div class="row">
