--- a/programs.html
+++ b/programs.html
@@ -6,16 +6,10 @@ group: navigation
 permalink: /programs/
 body_class: program
 ---
-<!--<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
-  <div class="inner">
-    <div class="copy">
-      <h1>YEP Programs</h1>
-    </div>
-  </div>
-</section>-->
 <div class="overview">
   <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="">Our Programs</h2>
+     <p class="intro"> Take advantage of or refer someone to unique initiatives that offer free resources to professionals looking to learn, grown, and soar new heights.</p>
   </div>
   <section class="sub-navigation">
     <div class="container">
