--- a/programs.html
+++ b/programs.html
@@ -7,7 +7,7 @@ permalink: /programs/
 body_class: program
 ---
 <div class="overview">
-  <div class="col-sm-12 text-center margin-bottom-4">
+  <div class="col-sm-12">
     <h2 class="">Our Programs</h2>
      <p class="intro"> Take advantage of or refer someone to unique initiatives that offer free resources to professionals looking to learn, grown, and soar new heights.</p>
   </div>
