--- a/programs.html
+++ b/programs.html
@@ -8,8 +8,9 @@ body_class: program
 ---
 <div class="overview">
   <div class="col-sm-12">
-    <h2 class="">Our Programs</h2>
+    <h1 class="margin-top-0 margin-bottom-2">Our Programs </h1>
      <p class="intro"> Take advantage of or refer someone to unique initiatives that offer free resources to professionals looking to learn, grown, and soar new heights.</p>
+  </div>
   </div>
   <section class="sub-navigation">
     <div class="container">
