--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -10,36 +10,36 @@ body_class: program
 ---
 <div class="row">
   <div class="col-sm-7 col-md-7">
-A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
-Program Requirements
-The Mentorship Program is a members-only program intended to encourage career growth for members of YEP_DC Chapter through a series of quality discussions. Space is limited and will be granted on a first-come first-served basis. Individuals who are not matched to participate in the program will be eligible to participate in a future program.
+<p> A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.</p>
+<p>Program Requirements</p>
+<p> The Mentorship Program is a members-only program intended to encourage career growth for members of YEP_DC Chapter through a series of quality discussions. Space is limited and will be granted on a first-come first-served basis. Individuals who are not matched to participate in the program will be eligible to participate in a future program.</p>
 
-Mentor Requirements
+<p>Mentor Requirements
 Must be at least 21 years old;
 A minimum of 5 years experienced in the U.S. professional job market;
 Background and experience in the filed or industry of interest (e.g. certified, licenced, length of experience, etc.);
 Meet program requirements and coordinate with designated protege throughout the Mentoring Program period; and
-Commit four (4) months to the program with 3-5 hours/month for mentorship activities.
+Commit four (4) months to the program with 3-5 hours/month for mentorship activities.</p>
 
-Mentee Requirements
+<p>Mentee Requirements
 Interest and commitment to proactively coordinate with and meet with designated mentor throughout the mentorship program period; and
-Commit four (4) months to the program with 3-5 hours/month for mentorship activities.
+Commit four (4) months to the program with 3-5 hours/month for mentorship activities.</p>
 
-Program Requirements
+<p>Program Requirements
 Maintain YEP membership throughout the program;
 Complete the application and screening process;
 Attend and participate in program activities and requirements;
 Willingness to be open, honest and a strong communicator to provide consistent follow-up support and guidance to mentee; and
-Willingness to communicate regularly with program staff, participate and submit activity information as required.
+Willingness to communicate regularly with program staff, participate and submit activity information as required.</p>
 
-Mentorship Resources
-This online space provides a platform for program participants to share experience and exchange resources.
+<p>Mentorship Resources</p>
+This online space provides a platform for program participants to share experience and exchange resources.</p>
 
-This tool allows members to do the following:
+<p>This tool allows members to do the following:
 Share Files and Links
 Initiate Group Discussions
 Ask Questions and Post Comments
 Network with other YEP Mentors and Mentees
-What do Mentors Do?
+What do Mentors Do?</p>
   </div>
 </div>
