--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -11,35 +11,34 @@ body_class: program
 <div class="row">
   <div class="col-sm-7 col-md-7">
 <p> A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.</p>
-<p>Program Requirements</p>
+<h3>Program Requirements</h3>
 <p> The Mentorship Program is a members-only program intended to encourage career growth for members of YEP_DC Chapter through a series of quality discussions. Space is limited and will be granted on a first-come first-served basis. Individuals who are not matched to participate in the program will be eligible to participate in a future program.</p>
 
-<p>Mentor Requirements
-Must be at least 21 years old;
-A minimum of 5 years experienced in the U.S. professional job market;
-Background and experience in the filed or industry of interest (e.g. certified, licenced, length of experience, etc.);
-Meet program requirements and coordinate with designated protege throughout the Mentoring Program period; and
+<h3>Mentor Requirements</h3>
+<li>Must be at least 21 years old;</li>
+<li>A minimum of 5 years experienced in the U.S. professional job market;</li>
+<li>Background and experience in the filed or industry of interest (e.g. certified, licenced, length of experience, etc.);</li>
+<li>Meet program requirements and coordinate with designated protege throughout the Mentoring Program period; and </li>
+<li>Commit four (4) months to the program with 3-5 hours/month for mentorship activities.</li>
+
+<h3>Mentee Requirements</h3>
+<p>Interest and commitment to proactively coordinate with and meet with designated mentor throughout the mentorship program period; and
 Commit four (4) months to the program with 3-5 hours/month for mentorship activities.</p>
 
-<p>Mentee Requirements
-Interest and commitment to proactively coordinate with and meet with designated mentor throughout the mentorship program period; and
-Commit four (4) months to the program with 3-5 hours/month for mentorship activities.</p>
+<h3>Program Requirements</h3>
+<li>Maintain YEP membership throughout the program;</li>
+<li>Complete the application and screening process;</li>
+<li>Attend and participate in program activities and requirements;</li>
+<li>Willingness to be open, honest and a strong communicator to provide consistent follow-up support and guidance to mentee; and</li>
+<li>Willingness to communicate regularly with program staff, participate and submit activity information as required.</li>
 
-<p>Program Requirements
-Maintain YEP membership throughout the program;
-Complete the application and screening process;
-Attend and participate in program activities and requirements;
-Willingness to be open, honest and a strong communicator to provide consistent follow-up support and guidance to mentee; and
-Willingness to communicate regularly with program staff, participate and submit activity information as required.</p>
-
-<p>Mentorship Resources</p>
-This online space provides a platform for program participants to share experience and exchange resources.</p>
-
-<p>This tool allows members to do the following:
-Share Files and Links
-Initiate Group Discussions
-Ask Questions and Post Comments
-Network with other YEP Mentors and Mentees
-What do Mentors Do?</p>
+<h3>Mentorship Resources</h3>
+<p>This online space provides a platform for program participants to share experience and exchange resources.</p>
+<p>This tool allows members to do the following:</p>
+<li> Share Files and Links </li>
+<li> Initiate Group Discussions</li>
+<li> Ask Questions and Post Comments </li>
+<li> Network with other YEP Mentors and Mentees </li>
+<li> What do Mentors Do? </li>
   </div>
 </div>
