--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -1,6 +1,6 @@
 ---
 layout: program
-title: Diaspora and Community Engagement (DCE)
+title: Diaspora and Community Engagement
 img: diaspora-engagement.jpg
 description: Bringing our community together to support the development of a cohesive network through various activities.
 manager: Vacant
@@ -29,4 +29,3 @@ body_class: program
     </p>
      <p>We are always looking for way to better know and understand the diaspora community, so please feel free to email us at <a href="mailto:community@yepnetwork.org">community@yepnetwork.org</a> </p>
       </div>
-          
