--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ sections:
                 </a>
                 <h3>{{ item.title }}</h3>
                 <p>{{ item.desc }}</p>
-                <a href="{{ item.path }}" class="btn btn-default">{{ item.title }}</a>
+                <a href="{{ item.path }}" class="btn btn-donate">{{ item.title }}</a>
               </div>
             </div>
             {% endfor %}
